<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swiperefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C1C1C">

    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:context=".MainActivity"
        tools:deviceIds="wear">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_boxedEdges="all"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="33dp">

            <ImageButton
                android:id="@+id/settings_button"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/settings_button"
                android:scaleType="center"
                android:src="@drawable/ic_baseline_settings_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar_nas_status_bar"
                tools:srcCompat="@drawable/ic_baseline_settings_24" />


            <View
                android:id="@+id/view3"
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/testView_NAS_status" />

            <TextView
                android:id="@+id/text_app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/environment_data"
                android:textAlignment="center"
                android:textColor="#E8EAEC"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/testView_NAS_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nas_status"
                android:textAlignment="center"
                android:textColor="#E8EAEC"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_env_data" />


            <ImageView
                android:id="@+id/imageView_nasstatus"
                android:layout_width="28dp"
                android:layout_height="33dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/temperature_sensor_icon_description"
                android:src="@drawable/ic_baseline_link_44"
                android:tint="#B5B5B5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3"
                tools:src="@drawable/ic_baseline_link_44" />


            <TextView
                android:id="@+id/textView_nastatus_ftp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="6dp"
                android:text="@string/ftp"
                android:textColor="#E8EAEC"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/imageView_nasstatus"
                app:layout_constraintTop_toTopOf="@+id/imageView_nasstatus" />

            <TextView
                android:id="@+id/textView_nastatus_ip_address_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="6dp"
                android:text="@string/ip_address_placeholder"
                android:textColor="#E8EAEC"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/imageView_IPAddress"
                app:layout_constraintTop_toTopOf="@+id/imageView_IPAddress" />

            <TextView
                android:id="@+id/textView_nastatus_usage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="6dp"
                android:text="@string/nas_udage_placeholder"
                android:textColor="#E8EAEC"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/imageView_disk_usage"
                app:layout_constraintTop_toTopOf="@+id/imageView_disk_usage" />

            <TextView
                android:id="@+id/textView_nastatus_smb_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:text="@string/samba"
                android:textColor="#E8EAEC"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/imageView_ftp_enabled"
                app:layout_constraintTop_toTopOf="@+id/imageView_nasstatus" />



            <ImageView
                android:id="@+id/imageView_ftp_enabled"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/ftp_enabled_check_mark"
                android:src="@drawable/ic_baseline_check_circle_outline_24"
                android:tint="#eeeeee"
                app:layout_constraintStart_toEndOf="@+id/textView_nastatus_ftp_text"
                app:layout_constraintTop_toTopOf="@+id/imageView_nasstatus" />

            <ImageView
                android:id="@+id/imageView_smb_enabled"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/samba_enabled_check_mark"
                android:src="@drawable/ic_outline_cancel_24"
                android:tint="#eeeeee"
                app:layout_constraintStart_toEndOf="@+id/textView_nastatus_smb_text"
                app:layout_constraintTop_toTopOf="@+id/imageView_nasstatus" />

            <ImageView
                android:id="@+id/imageView_IPAddress"
                android:layout_width="28dp"
                android:layout_height="33dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/server_s_ip_address"
                android:src="@drawable/ic_baseline_dns_44"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_nasstatus" />

            <ImageView
                android:id="@+id/imageView_disk_usage"
                android:layout_width="28dp"
                android:layout_height="33dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/server_s_disk_usage"
                android:src="@drawable/ic_outline_folder_open_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_IPAddress" />
<!--
            <ProgressBar
                android:id="@+id/progressBar_nas_status_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="11dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="4dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_disk_usage" />-->

            <com.akexorcist.roundcornerprogressbar.TextRoundCornerProgressBar
                android:id="@+id/progressBar_nas_status_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="4dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_disk_usage"
                app:rcBackgroundColor="#3326A69A"
                app:rcBackgroundPadding="2dp"
                app:rcMax="100"
                app:rcProgress="50"
                app:rcProgressColors="@array/sample_progress_gradient"
                app:rcRadius="16dp"
                app:rcTextPositionPriority="inside"
                app:rcTextProgressSize="7sp"
                app:rcTextProgressColor="#1e1e1e"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_env_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <me.bastanfar.semicirclearcprogressbar.SemiCircleArcProgressBar
                    android:id="@+id/progressBar_temperature"
                    android:layout_width="80dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:percent="30"
                    app:progressBarColor="#29B6F6"
                    app:progressBarWidth="10"
                    app:progressPlaceHolderColor="#407986CB"
                    app:progressPlaceHolderWidth="15" />

                <TextView
                    android:id="@+id/textView_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percent_placeholder_text"
                    android:textColor="#E8EAEC"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/progressBar_humidity"
                    app:layout_constraintStart_toStartOf="@+id/progressBar_humidity"
                    app:layout_constraintTop_toBottomOf="@+id/imageView_humidity" />

                <TextView
                    android:id="@+id/textView_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percent_placeholder_text"
                    android:textColor="#E8EAEC"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/progressBar_luminosity"

                    app:layout_constraintStart_toStartOf="@+id/progressBar_luminosity"
                    app:layout_constraintTop_toBottomOf="@+id/imageView_light" />

                <me.bastanfar.semicirclearcprogressbar.SemiCircleArcProgressBar
                    android:id="@+id/progressBar_humidity"
                    android:layout_width="80dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toEndOf="@+id/progressBar_temperature"
                    app:layout_constraintTop_toTopOf="parent"
                    app:percent="30"
                    app:progressBarColor="#EF5350"
                    app:progressBarWidth="10"
                    app:progressPlaceHolderColor="#407986CB"
                    app:progressPlaceHolderWidth="15" />

                <me.bastanfar.semicirclearcprogressbar.SemiCircleArcProgressBar
                    android:id="@+id/progressBar_luminosity"
                    android:layout_width="80dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_temperature"
                    app:percent="30"
                    app:progressBarColor="#66BB6A"
                    app:progressBarWidth="10"
                    app:progressPlaceHolderColor="#407986CB"
                    app:progressPlaceHolderWidth="15" />


                <ImageView
                    android:id="@+id/imageView_temperature"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/temperature_sensor_icon_description"
                    android:src="@drawable/ic_baseline_device_thermostat_24"
                    android:tint="#29B6F6"
                    app:layout_constraintEnd_toEndOf="@+id/progressBar_temperature"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/progressBar_temperature"
                    tools:src="@drawable/ic_baseline_device_thermostat_24" />


                <ImageView
                    android:id="@+id/imageView_humidity"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#8E8484"
                    android:contentDescription="@string/humidity_sensor_icon_description"
                    android:foregroundTint="#000000"
                    android:src="@drawable/ic_baseline_water_damage_44"
                    android:tint="#EF5350"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/progressBar_humidity"
                    app:layout_constraintTop_toTopOf="@+id/progressBar_humidity"
                    tools:src="@drawable/ic_baseline_water_damage_44" />

                <ImageView
                    android:id="@+id/imageView_light"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#8E8484"
                    android:contentDescription="@string/light_sensor_icon_description"
                    android:foregroundTint="#000000"
                    android:src="@drawable/ic_baseline_light_mode_44"
                    android:tint="#66BB6A"
                    app:layout_constraintEnd_toEndOf="@+id/progressBar_luminosity"
                    app:layout_constraintStart_toStartOf="@+id/progressBar_luminosity"
                    app:layout_constraintTop_toTopOf="@+id/progressBar_luminosity"
                    tools:src="@drawable/ic_baseline_light_mode_44" />

                <TextView
                    android:id="@+id/textView_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_placeholder_text"
                    android:textColor="#E8EAEC"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/progressBar_temperature"
                    app:layout_constraintStart_toStartOf="@+id/progressBar_temperature"
                    app:layout_constraintTop_toBottomOf="@+id/imageView_temperature" />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>